--- a/submission/title.html
+++ b/submission/title.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../assets/css/global.css" />
-    <link rel="stylesheet" href="../../assets/css/pages.css" />
-    <title>Submit your experience - Technical Quality - Airbnb</title>
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
+    <title>Submit your experience - Title - Airbnb</title>
   </head>
   <body class="with-new-header touch">
     <div id="site-skip-links">
@@ -339,7 +339,6 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="expectations-2"
-                                        onclick="window.location.href='participation.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -403,8 +402,9 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="expectations-4"
+                                        onclick="window.location.href='tq.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-wrapper">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             Technical quality
                                           </div>
@@ -582,7 +582,7 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="pricing-and-booking-traveler-requirements"
-                                        onclick="window.location.href='guestReq.html';"
+                                        onclick="window.location.href='GuestReq.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -615,9 +615,8 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="experience-name-1"
-                                        onclick="window.location.href='title.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">Title</div>
                                           <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
@@ -853,7 +852,6 @@
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="lead-time"
                                         onclick="window.location.href='booking.html';"
-                                        onclick="window.location.href='cancel.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -886,6 +884,7 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="cancellation-policy"
+                                        onclick="window.location.href='cancel.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -1010,17 +1009,20 @@
                         <button id="side-nav-toggle" aria-expanded="true" type="button" class="header__logo-btn">
                           <span>
                             <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Toggle step navigation" focusable="false" style="
-                                height: 14px;
-                                width: 14px;
-                                display: block;
-                                fill: currentcolor;
+                              height: 14px;
+                              width: 14px;
+                              display: block;
+                              fill: currentcolor;
                               ">
                               <path d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z" fill-rule="evenodd"></path>
                             </svg>
                           </span>
                         </button>
                       </div>
-                      <div class="header__logo-btn-text">Technical quality</div>
+                      <div class="header__logo-btn-text">Title</div>
+                      <div class="margin__left-auto">
+                        <button type="button" class="btn-outline-small">Preview</button>
+                      </div>
                     </div>
                     <section class="site-content__page-content">
                       <div class="vh-100">
@@ -1036,71 +1038,88 @@
                                       class="heading"
                                       elementtiming="LCP-target"
                                     >
-                                      Technical quality
+                                      Let’s give your experience a name
                                     </h1>
+                                  </div>
+                                  <div class="account-container-mb__header-show-more">
+                                    <span class="_11oyobo"
+                                      >Make it descriptive and unique so guests
+                                      will understand what you’re
+                                      offering.</span
+                                    >
                                   </div>
                                 </div>
                               </section>
                             </div>
-                            <div
-                              class="lite-image"
-                              style="
-                                border-radius: 12px;
-                                background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAOUlEQVQIHWPUc9CXk1RVlf/198W7X0JfGJ3CgkTkJf5ePmnIzcHFxcro6OUpwsetKyn09cvHT/84AZaFEWWdNlrJAAAAAElFTkSuQmCC');
-                                background-size: contain;
-                                --dls-liteimage-padding-top: 66.6667%;
-                              "
-                            >
-                              <div class="lite-image__container">
-                                <img
-                                  class="lite-image__default-static"
-                                  aria-hidden="true"
-                                  alt=""
-                                  elementtiming="LCP-target"
-                                  src="https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg"
-                                  data-original-uri="https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg"
-                                  style="
-                                    object-fit: contain;
-                                    border-radius: 12px;
-                                  "
-                                />
-                                <div
-                                  class="lite-image__fallback"
-                                  style="
-                                    background-image: url('https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg');
-                                    background-size: contain;
-                                    border-radius: 12px;
-                                  "
-                                ></div>
+                            <div class="site-content__content-menu">
+                              <span
+                                class="text-highlight dir dir-ltr"
+                                id="title-textarea-label"
+                                >Let’s give your experience a name</span
+                              >
+                              <div class="become-a-host__form-input-wrapper">
+                                <div dir="ltr">
+                                  <textarea
+                                    maxlength="60"
+                                    aria-labelledby="title-textarea-label"
+                                    data-testid="title-textarea"
+                                    rows="4"
+                                    spellcheck="false"
+                                    class="_yv33y4"
+                                    autocomplete="off"
+                                    id="title-textarea"
+                                    placeholder="Warm up in secret hot springs of Iceland"
+                                  >
+Lorem Ipsum is simply dummy text of the printing</textarea
+                                  >
+                                </div>
                               </div>
-                            </div>
-                            <div class="site-content__content-wrapper-rules">
-                              <div class="inline">
-                                <p class="site-content__content-wrapper-rules-note">
-                                  We’re looking for hosts who can also master
-                                  the technical aspects of a great online
-                                  experience.
-                                </p>
-                                For example:
-                                <ul class="site-content__content-wrapper-rules-ol">
-                                  <li>
-                                    Lighting that helps guests to see you and
-                                    the activity
-                                  </li>
-                                  <li>
-                                    Sound that is clear and without background
-                                    noise
-                                  </li>
-                                  <li>
-                                    Fast internet for smooth video without
-                                    disconnections
-                                  </li>
-                                </ul>
-                                <p class="site-content__content-wrapper-rules-note">
-                                  Guests shouldn’t be distracted by glitches,
-                                  and you should be able to patiently guide them
-                                  if they’re having trouble.
-                                </p>
+                              <div class="_1b3feto">
+                                <div class="textarea-lg-length__text">
+                                  <span aria-hidden="true">48/60</span
+                                  ><span
+                                    class="text-highlight dir dir-ltr"
+                                    aria-atomic="true"
+                                    aria-live="polite"
+                                    >48 out of 60 characters used</span
+                                  >
+                                </div>
+                                <div class="_63wpx2">
+                                  <button type="button" class="btn-link-condensed">
+                                    Show examples
+                                  </button>
+                                </div>
+                              </div>
+                              <div class="_14awj82">
+                                <div class="_t6qflv">
+                                  <div class="_morge2">
+                                    Here's how you can improve your title:
+                                  </div>
+                                </div>
+                                <div class="_75y7ds">
+                                  <div class="confirm-pay__trip-detail-rate">
+                                    <svg
+                                      viewBox="0 0 32 32"
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      aria-label="Potential issue"
+                                      role="img"
+                                      focusable="false"
+                                      style="
+                                        display: block;
+                                        height: 16px;
+                                        width: 16px;
+                                        fill: rgb(255, 175, 15);
+                                      "
+                                    >
+                                      <path
+                                        d="M31.443 25.488L18.591 3.458a3.004 3.004 0 0 0-4.103-1.08 3.01 3.01 0 0 0-1.08 1.08L.559 25.488a2.982 2.982 0 0 0-.31 2.276A3.001 3.001 0 0 0 3.149 30h25.703a3.003 3.003 0 0 0 2.591-4.512zM14.5 9h3v10h-3V9zM16 26a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
+                                      ></path>
+                                    </svg>
+                                  </div>
+                                  <div class="_thlrrb">
+                                    Possible spelling mistake found
+                                  </div>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -1147,7 +1166,7 @@
                               class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
-                              Got it!
+                              Next
                             </button>
                           </div>
                         </footer>
