--- a/submission/tq.html
+++ b/submission/tq.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../assets/css/global.css" />
-    <link rel="stylesheet" href="../../assets/css/pages.css" />
-    <title>Submit your experience - Cancellation policy - Airbnb</title>
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
+    <title>Submit your experience - Technical Quality - Airbnb</title>
   </head>
   <body class="with-new-header touch">
     <div id="site-skip-links">
@@ -403,9 +403,8 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="expectations-4"
-                                        onclick="window.location.href='tq.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             Technical quality
                                           </div>
@@ -583,7 +582,7 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="pricing-and-booking-traveler-requirements"
-                                        onclick="window.location.href='GuestReq.html';"
+                                        onclick="window.location.href='guestReq.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -854,6 +853,7 @@
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="lead-time"
                                         onclick="window.location.href='booking.html';"
+                                        onclick="window.location.href='cancel.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -887,7 +887,7 @@
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="cancellation-policy"
                                       >
-                                        <div class="app-theme__sidebar-expandable-wrapper">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             Cancellation policy
                                           </div>
@@ -1010,17 +1010,17 @@
                         <button id="side-nav-toggle" aria-expanded="true" type="button" class="header__logo-btn">
                           <span>
                             <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Toggle step navigation" focusable="false" style="
-                              height: 14px;
-                              width: 14px;
-                              display: block;
-                              fill: currentcolor;
+                                height: 14px;
+                                width: 14px;
+                                display: block;
+                                fill: currentcolor;
                               ">
                               <path d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z" fill-rule="evenodd"></path>
                             </svg>
                           </span>
                         </button>
                       </div>
-                      <div class="header__logo-btn-text">Cancellation policy</div>
+                      <div class="header__logo-btn-text">Technical quality</div>
                     </div>
                     <section class="site-content__page-content">
                       <div class="vh-100">
@@ -1036,80 +1036,73 @@
                                       class="heading"
                                       elementtiming="LCP-target"
                                     >
-                                      Choose a cancellation policy
+                                      Technical quality
                                     </h1>
                                   </div>
                                 </div>
                               </section>
                             </div>
-                            <section>
-                              <div style="margin-bottom: 24px">
-                                <div>
-                                  <div class="footer__progress-active-wrapper">
-                                    <div class="va-top">
-                                      <input
-                                        aria-label="strict"
-                                        id="strict"
-                                        data-testid="policy__strict"
-                                        name="lyt-radio-cancellation-policy"
-                                        class="radio__button"
-                                        type="radio"
-                                        value="CANCEL_STRICT"
-                                      />
-                                    </div>
-                                    <div class="va-top-h">
-                                      <div style="margin-left: 16px">
-                                        <div style="margin-bottom: 8px">
-                                          <div class="explore__carousel-img-overlay-text">
-                                            Guests can cancel until 7 days
-                                            before the Experience start time for
-                                            a full refund, or within 24 hours of
-                                            booking as long as the booking is
-                                            made more than 48 hours before the
-                                            start time.
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div
-                                    style="
-                                      margin-top: 24px;
-                                      margin-bottom: 24px;
-                                    "
-                                  >
-                                    <div class="b-divider"></div>
-                                  </div>
-                                </div>
-                                <div>
-                                  <div class="footer__progress-active-wrapper">
-                                    <div class="va-top">
-                                      <input
-                                        aria-label="flexible"
-                                        id="flexible"
-                                        data-testid="policy__flexible"
-                                        name="lyt-radio-cancellation-policy"
-                                        class="explore-filter-menu__radio-input"
-                                        type="radio"
-                                        value="CANCEL_FLEXIBLE"
-                                        checked=""
-                                      />
-                                    </div>
-                                    <div class="va-top-h">
-                                      <div style="margin-left: 16px">
-                                        <div style="margin-bottom: 8px">
-                                          <div class="explore__carousel-img-overlay-text">
-                                            Guests can cancel until 24 hours
-                                            before the Experience start time for
-                                            a full refund.
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
+                            <div
+                              class="lite-image"
+                              style="
+                                border-radius: 12px;
+                                background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAOUlEQVQIHWPUc9CXk1RVlf/198W7X0JfGJ3CgkTkJf5ePmnIzcHFxcro6OUpwsetKyn09cvHT/84AZaFEWWdNlrJAAAAAElFTkSuQmCC');
+                                background-size: contain;
+                                --dls-liteimage-padding-top: 66.6667%;
+                              "
+                            >
+                              <div class="lite-image__container">
+                                <img
+                                  class="lite-image__default-static"
+                                  aria-hidden="true"
+                                  alt=""
+                                  elementtiming="LCP-target"
+                                  src="https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg"
+                                  data-original-uri="https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg"
+                                  style="
+                                    object-fit: contain;
+                                    border-radius: 12px;
+                                  "
+                                />
+                                <div
+                                  class="lite-image__fallback"
+                                  style="
+                                    background-image: url('https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg');
+                                    background-size: contain;
+                                    border-radius: 12px;
+                                  "
+                                ></div>
                               </div>
-                            </section>
+                            </div>
+                            <div class="site-content__content-wrapper-rules">
+                              <div class="inline">
+                                <p class="site-content__content-wrapper-rules-note">
+                                  We’re looking for hosts who can also master
+                                  the technical aspects of a great online
+                                  experience.
+                                </p>
+                                For example:
+                                <ul class="site-content__content-wrapper-rules-ol">
+                                  <li>
+                                    Lighting that helps guests to see you and
+                                    the activity
+                                  </li>
+                                  <li>
+                                    Sound that is clear and without background
+                                    noise
+                                  </li>
+                                  <li>
+                                    Fast internet for smooth video without
+                                    disconnections
+                                  </li>
+                                </ul>
+                                <p class="site-content__content-wrapper-rules-note">
+                                  Guests shouldn’t be distracted by glitches,
+                                  and you should be able to patiently guide them
+                                  if they’re having trouble.
+                                </p>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <footer class="footer__item-list">
@@ -1154,7 +1147,7 @@
                               class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
-                              Next
+                              Got it!
                             </button>
                           </div>
                         </footer>
