--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/css/pages.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../assets/css/global.css" />
-    <link rel="stylesheet" href="../../assets/css/pages.css" />
-    <title>Submit your experience - Experience type - Airbnb</title>
+    <title>Submit your experience - Group Size - Airbnb</title>
   </head>
-  <body class="with-new-header">
+  <body class="with-new-header touch">
     <div id="site-skip-links">
       <a
         class="screen-reader-only screen-reader-only-focusable skip-to-content"
@@ -132,8 +135,9 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="experience-type"
+                                        onclick="window.location.href='exp_type.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-wrapper">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             Experience type
                                           </div>
@@ -582,7 +586,7 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="pricing-and-booking-traveler-requirements"
-                                        onclick="window.location.href='guestReq.html';"
+                                        onclick="window.location.href='GuestReq.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
@@ -724,9 +728,8 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="group-size-v2"
-                                        onclick="window.location.href='GroupSize.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">Group size</div>
                                           <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
@@ -1020,7 +1023,10 @@
                           </span>
                         </button>
                       </div>
-                      <div class="header__logo-btn-text">Experience type</div>
+                      <div class="header__logo-btn-text">Group size</div>
+                      <div class="margin__left-auto">
+                        <button type="button" class="btn-outline-small">Preview</button>
+                      </div>
                     </div>
                     <section class="site-content__page-content">
                       <div class="vh-100">
@@ -1036,67 +1042,55 @@
                                       class="heading"
                                       elementtiming="LCP-target"
                                     >
-                                      What kind of experience do you want to
-                                      host?
+                                      Maximum group size
                                     </h1>
+                                  </div>
+                                  <div class="account-container-mb__header-show-more">
+                                    <span class="_11oyobo"
+                                      >Think about what group size is best for
+                                      your experience. Is it more interactive
+                                      with fewer people, or more fun with a
+                                      larger group? Remember: If only one person
+                                      books, you'll still be expected to
+                                      host.</span
+                                    >
                                   </div>
                                 </div>
                               </section>
                             </div>
-                            <div class="site-content__content-menu">
-                              <div role="radiogroup">
-                                <button
-                                  class="list-group__btn"
-                                  type="button"
-                                  role="radio"
-                                  aria-checked="false"
-                                  data-testid="offline-button"
-                                  theme="[object Object]"
-                                >
-                                  <div class="site-content__content-menu-list">
-                                    <div class="site-content__menu-header">In person</div>
-                                    <div class="site-content__menu-desc">
-                                      Guests will join you in the real world,
-                                      for hands-on participation.
-                                    </div>
-                                  </div>
-                                  <div class="site-content__menu-icon">
-                                    <svg
-                                      viewBox="0 0 32 32"
-                                      xmlns="http://www.w3.org/2000/svg"
-                                      aria-hidden="true"
-                                      role="presentation"
-                                      focusable="false"
-                                      style="
-                                        display: block;
-                                        height: 32px;
-                                        width: 32px;
-                                        fill: currentcolor;
-                                      "
-                                    >
-                                      <path
-                                        d="M22 5a6 6 0 0 1 3.643 10.768 9.003 9.003 0 0 1 5.353 7.967L31 24h-2a7.002 7.002 0 0 0-5.999-6.929v-2.197A4.002 4.002 0 0 0 22 7a4 4 0 0 0-3.679 5.574A4.991 4.991 0 0 1 21 17a4.986 4.986 0 0 1-1.599 3.665 9.003 9.003 0 0 1 5.595 8.07L25 29h-2a7.002 7.002 0 0 0-5.999-6.929v-2.242a3.001 3.001 0 1 0-2 0L15 22.071a7.002 7.002 0 0 0-5.996 6.688L9 29H7a9.003 9.003 0 0 1 5.6-8.335 5 5 0 0 1 1.077-8.093A4 4 0 1 0 9 14.874v2.197a7.002 7.002 0 0 0-5.996 6.688L3 24H1a9.002 9.002 0 0 1 5.357-8.232A6 6 0 1 1 15.917 10h.166A6.002 6.002 0 0 1 22 5z"
-                                      ></path>
-                                    </svg>
-                                  </div>
-                                </button>
-                                <div class="site-content__menu-list">
-                                  <button
-                                    class="list-group__btn--active"
-                                    type="button"
-                                    role="radio"
-                                    aria-checked="true"
-                                    data-testid="online-button"
-                                    theme="[object Object]"
-                                  >
-                                    <div class="site-content__content-menu-list">
-                                      <div class="site-content__menu-header">Online only</div>
-                                      <div class="site-content__menu-desc">
-                                        Guests will join you virtually, using
-                                        Zoom video conferencing software.
+                            <div>
+                              <div class="site-content__content-wrapper-h2-wrapper">
+                                <div class="_1f90wx">
+                                  <div class="_j69sjg">Public groups</div>
+                                  <div class="form-floating">
+                                    <label
+                                      class="form-floating__control"
+                                      for="data-type-picker-Public groups"
+                                      ><div class="form-floating__label">
+                                        <div class="spinner-chart__input-title-text">
+                                          Maximum group size
+                                        </div>
                                       </div>
-                                    </div>
-                                    <div class="site-content__menu-icon">
+                                      <div class="box-border">
+                                        <select
+                                          name="data-type-picker-Public groups"
+                                          class="form__select"
+                                          id="data-type-picker-Public groups"
+                                        >
+                                          <option value="1">1</option>
+                                          <option value="2">2</option>
+                                          <option value="3">3</option>
+                                          <option value="4">4</option>
+                                          <option value="5">5</option>
+                                          <option value="6">6</option>
+                                          <option value="7">7</option>
+                                          <option value="8">8</option>
+                                          <option value="9">9</option>
+                                          <option value="10">10</option>
+                                        </select>
+                                      </div></label
+                                    >
+                                    <div class="form-floating__addon">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -1105,17 +1099,109 @@
                                         focusable="false"
                                         style="
                                           display: block;
-                                          height: 32px;
-                                          width: 32px;
-                                          fill: currentcolor;
+                                          fill: none;
+                                          height: 16px;
+                                          width: 16px;
+                                          stroke: currentcolor;
+                                          stroke-width: 4;
+                                          overflow: visible;
                                         "
                                       >
-                                        <path
-                                          d="M26 3a5 5 0 0 1 4.995 4.783L31 8v12a5 5 0 0 1-4.783 4.995L26 25h-5v2h2v2H9v-2h2v-2H6a5 5 0 0 1-4.995-4.783L1 20V8a5 5 0 0 1 4.783-4.995L6 3zm-7 22h-6v2h6zm7-20H6a3 3 0 0 0-2.995 2.824L3 8v12a3 3 0 0 0 2.824 2.995L6 23h20a3 3 0 0 0 2.995-2.824L29 20V8a3 3 0 0 0-3-3zM5 11c5.43 0 9.848 4.327 9.996 9.72L15 21h-2a8 8 0 0 0-7.75-7.996L5 13zm0 4a6 6 0 0 1 5.996 5.775L11 21H9a4 4 0 0 0-3.8-3.995L5 17zm0 4a2 2 0 0 1 1.995 1.85L7 21H5z"
-                                        ></path>
+                                        <g fill="none">
+                                          <path
+                                            d="m28 12-11.2928932 11.2928932c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-11.2928932-11.2928932"
+                                          ></path>
+                                        </g>
                                       </svg>
                                     </div>
-                                  </button>
+                                  </div>
+                                  <div class="_192q3o1">
+                                    You can host a public group for up to 10
+                                    guests. Guests who book may or may not know
+                                    each other.
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="site-content__content-wrapper-h2-wrapper">
+                                <div class="_1f90wx">
+                                  <div class="_j69sjg">Private groups</div>
+                                  <div class="form-floating">
+                                    <label
+                                      class="form-floating__control"
+                                      for="data-type-picker-Private groups"
+                                      ><div class="form-floating__label">
+                                        <div class="spinner-chart__input-title-text">
+                                          Maximum group size
+                                        </div>
+                                      </div>
+                                      <div class="box-border">
+                                        <select
+                                          name="data-type-picker-Private groups"
+                                          class="form__select"
+                                          id="data-type-picker-Private groups"
+                                        >
+                                          <option value="1">1</option>
+                                          <option value="2">2</option>
+                                          <option value="3">3</option>
+                                          <option value="4">4</option>
+                                          <option value="5">5</option>
+                                          <option value="6">6</option>
+                                          <option value="7">7</option>
+                                          <option value="8">8</option>
+                                          <option value="9">9</option>
+                                          <option value="10">10</option>
+                                          <option value="11">11</option>
+                                          <option value="12">12</option>
+                                          <option value="13">13</option>
+                                          <option value="14">14</option>
+                                          <option value="15">15</option>
+                                          <option value="16">16</option>
+                                          <option value="17">17</option>
+                                          <option value="18">18</option>
+                                          <option value="19">19</option>
+                                          <option value="20">20</option>
+                                          <option value="21">21</option>
+                                          <option value="22">22</option>
+                                          <option value="23">23</option>
+                                          <option value="24">24</option>
+                                          <option value="25">25</option>
+                                          <option value="26">26</option>
+                                          <option value="27">27</option>
+                                          <option value="28">28</option>
+                                          <option value="29">29</option>
+                                          <option value="30">30</option>
+                                        </select>
+                                      </div></label
+                                    >
+                                    <div class="form-floating__addon">
+                                      <svg
+                                        viewBox="0 0 32 32"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        aria-hidden="true"
+                                        role="presentation"
+                                        focusable="false"
+                                        style="
+                                          display: block;
+                                          fill: none;
+                                          height: 16px;
+                                          width: 16px;
+                                          stroke: currentcolor;
+                                          stroke-width: 4;
+                                          overflow: visible;
+                                        "
+                                      >
+                                        <g fill="none">
+                                          <path
+                                            d="m28 12-11.2928932 11.2928932c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-11.2928932-11.2928932"
+                                          ></path>
+                                        </g>
+                                      </svg>
+                                    </div>
+                                  </div>
+                                  <div class="_192q3o1">
+                                    For online experiences, you can host a
+                                    private group for up to 30 guests.
+                                  </div>
                                 </div>
                               </div>
                             </div>
@@ -1145,7 +1231,13 @@
                             </div>
                           </div>
                           <div class="footer__progressbar-inactive">
-                            <div></div>
+                            <button
+                              id="lyt-back-button"
+                              type="button"
+                              class="btn-outline-small"
+                            >
+                              Back
+                            </button>
                             <div data-showat="largeAndAbove">
                               <div class="footer__progressbar-status-wrap">
                                 <div class="footer__progressbar-status-text">2 items to submit</div>
